<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context="com.example.mvp.fitnessalpha.RecordWorkoutFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <TextView
            android:id="@+id/recordWorkoutLabel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/recordWorkout"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/userProfileBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/userProfileBtnDescription"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/user_profile_image" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/ligh_gray_background">

        <TextView
            android:id="@+id/recordDistanceLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/distance"
            android:textAlignment="viewStart"
            android:textAllCaps="true"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/recordDistanceValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/defaultDistanceValue"
            android:textAlignment="center"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/distanceUnit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/distanceUnit"
            android:textAlignment="textEnd"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/ligh_gray_background">


        <TextView
            android:id="@+id/durationLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/durationLabel"
            android:textAlignment="viewStart"
            android:textAllCaps="true"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/recordDurationValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/defaultDurationValue"
            android:textAlignment="center"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/durationUnit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/durationUnit"
            android:textAlignment="textEnd"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_weight="3" />

    <Button
        android:id="@+id/startStopBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:background="@color/green_start_color"
        android:text="@string/startWorkout"
        android:textAlignment="center"
        android:textStyle="bold" />

</LinearLayout>
